<resources>
    <string name="app_name">To Do</string>

    <string name="title">To Do List Today</string>
    <string name="task_overview">Task Overview</string>
    <string name="delete_all">Delete All</string>
    <string name="help">Help</string>
    <string name="no_task_message">Chill out,\nYou have no tasks to work upon!</string>

    <string name="task_description">Task Description</string>
    <string name="task_description_sample">This is sample task to check the view of this layout and the alignment</string>
    <string name="task_description_dummy">This is a task.</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="fifteen">15</string>
    <string name="thirty">30</string>
    <string name="recurrence">Recurrence</string>
    <string name="none">None</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="task_time">Task time</string>
    <string name="task_time_with_a">10:10 AM</string>
    <string name="task_time_error_empty">Task time can\'t be empty</string>
    <string name="task_time_error_invalid_time">Past time can\'t be set for one time task</string>
    <string name="time">HH:MM</string>
    <string name="notify_before">Remind Before (Mins)</string>
    <string name="reminder_type">Reminder Type</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="reminder_time_sample">88:88 a.m.</string>

    <string name="auto_delete_by_eod">Auto delete by end of the day</string>
    <string name="more_options">More Options</string>

    <string name="add_task">Add Task</string>
    <string name="task_split_up">Task Split Up</string>
    <string name="edit">Edit</string>
    <string name="stop_alarm">Stop Alarm</string>

    <string name="total_tasks">Total Tasks</string>
    <string name="tasks_completed">Completed Tasks</string>
    <string name="tasks_pending">Pending Tasks</string>
    <string name="count">99</string>

    <string name="sample_priority">Medium Priority Task</string>
    <string name="sample_date">27, September 2020 12:55 pm</string>
    <string name="status">In Progress</string>
    <string name="sample_rec">Daily Recurrence Task</string>
    <string name="date_created_label">Date Created</string>
    <string name="date_completed_label">Date Completed</string>
    <string name="last_occurrence_label">Last Occurrence</string>
    <string name="next_occurrence_label">Next Occurrence</string>

    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="title1"><![CDATA[Easy & Powerful]]></string>
    <string name="title2">Priority</string>
    <string name="title3">Swipe Gestures</string>
    <string name="title4"><![CDATA[View & Edit]]></string>
    <string name="title5">Battery Optimization</string>

    <string name="title1_text">Add your task in single tap and \ncustomize it with powerful options</string>
    <string name="title2_text">Different labels available for different priority tasks</string>
    <string name="title3_text"><![CDATA[Swipe right to mark a task \'Completed\' \n& Swipe left to delete a task]]></string>
    <string name="title4_text"><![CDATA[Tap on a task to view the details & edit them]]>.</string>
    <string name="title5_text">In some devices, battery optimization needs to be disabled. Check Help Section for more info.</string>

    <string name="bat_opt_title">Battery Optimization Tip</string>
    <string name="battery_optimization_tip"><![CDATA[\t If you do not get reminders when the application is not running,
    chances are that, your device uses custom operating system and it prevents the application running in background.
     You need to disable the battery optimization for this application.\n
     \n\t\t 1. Go To Optimization Settings
     \n\t\t 2. Select \'To Do\' App
     \n\t\t 3. Choose \'Don\'t Optimize\']]></string>
    <string name="go_to_battery_opt">Go To Battery Optimization Settings</string>

    <!--Original ID-->
    <!-- <string name="banner_ad_unit_id">ca-app-pub-4587610802196055/6294540600</string>-->
    <!--Test ID-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
 </resources>
