<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pure_white"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/date_created_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_value">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/date_created_label" />

        <TextView
            android:id="@+id/date_created_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5.5"
            android:text="@string/sample_date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_completed_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_created_group">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/date_completed_label" />

        <TextView
            android:id="@+id/date_completed_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5.5"
            android:text="@string/sample_date" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recurrence_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_completed_group">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:text="@string/recurrence" />

        <TextView
            android:id="@+id/recurrence_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5.5"
            android:text="@string/monthly" />
    </LinearLayout>

    <TextView
        android:id="@+id/priority_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/sample_priority"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/occurence_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recurrence_group">

        <LinearLayout
            android:id="@+id/last_occurrence_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:weightSum="9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:text="@string/last_occurrence_label" />

            <TextView
                android:id="@+id/last_occurrence_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.5"
                android:text="@string/sample_date" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/next_occurrence_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:weightSum="9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_occurrence_group">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:text="@string/next_occurrence_label" />

            <TextView
                android:id="@+id/next_occurrence_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.5"
                android:text="@string/sample_date" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/priority_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_label_high"
        app:layout_constraintBottom_toBottomOf="@+id/priority_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/priority_value" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="16dp"
        android:scaleType="center"
        app:fabCustomSize="50dp"
        app:maxImageSize="25dp"
        app:backgroundTint="@color/design_default_color_primary"
        android:src="@drawable/ic_edit_task_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/occurence_group" />

</androidx.constraintlayout.widget.ConstraintLayout>